This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

04-Sep-2009 (Zesstra)
  - Fixed initialization of libxml2 (#671).
    LIBXML_TEST_VERSION already allocates memory, so xmlMemSetup() has to be
    called before that macro. Otherwise crashes may occur.
    (pkg-xml2.c)
  - Use the 'permanent' variants of our allocation function, because the
    memory used by libxml2 should not be subject to the garbage collector.
    (pkg-xml2.c, pkg-iksemel.c)

02-Sep-2009 (Gnomi)
  - Fixed a crash in symbol_function with very long function names
    by removing the necessity of an alloca and giving make_shared_identifier
    the length of the identifier as an additional parameter.
    (lex.c, prolang.y)
  - Added a sefun:: specifier to explicitly call simul efuns. (#669)
    (lex.c, prolang.y)

03-Aug-2009 (Gnomi)
  - Memory corruption when using protected string ranges.
    (interpret.c)

20-Jul-2009 (Gnomi)
  - Set a maximum number of retries for reading data (in case the
    underlying functions go crazy and cause an endless loop).
    (pkg-gnutls.c, pkg-openssl.c)

13-Jul-2009 (Fuchur)
  - correct strict aliasing problem in byte code accessor functions.
    also generate the accessor functions using a script.
    (bytecode.h, mk_bytecode_gen.sh)

23-Jun-2009 (Gnomi)
  - Corrected a memory leak in send_udp.
    (comm.c)
  - String corruption by present_clone.
    (efuns.c)

18-Jun-2009 (Zesstra)
  - The data from the bytecode is not written/read byte per byte and
    combined by shifting and masking anymore, but by reading the
    specific type directly. This should not have endianness issues, as
    long as compiled bytecode is not transferred to a different machine.
    But Alignment issues may arise on some system.
  - The bytecode starts using fixed-size integer types from C99.
  - Entities in the bytecode are getting their semantic types (like
    bc_offset_t).