@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all glory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+08-Sep 2009 (Zesstra)
+  - Get permanently allocated memory in xml_pkg_strdup(), which is not
+    subject to the GC to prevent some nasty problems.
+    (pkg-xml2.c)
+
 04-Sep-2009 (Zesstra)
   - Fixed initialization of libxml2 (#671).
     LIBXML_TEST_VERSION already allocates memory, so xmlMemSetup() has to be
